--- a/tools/c7n_sphinxext/pyproject.toml
+++ b/tools/c7n_sphinxext/pyproject.toml
@@ -27,6 +27,7 @@ sphinx_markdown_tables = "^0.0.12"
 myst-parser = "^0.15.2"
 click = "^8.0"
 typing-extensions = "^3.7.4"
+docutils = ">=0.14,<0.18"
 
 [tool.poetry.dev-dependencies]
 c7n = {path = "../..", develop = true}
