--- a/tools/c7n_azure/requirements.txt
+++ b/tools/c7n_azure/requirements.txt
@@ -69,8 +69,7 @@ colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and p
 cryptography==36.0.1; python_version >= "3.6"
 distlib==0.3.4
 idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlib-metadata==4.8.3; python_version < "3.8" and python_version >= "3.6"
-importlib-resources==5.4.0; python_version >= "3.6" and python_version < "3.7" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.7" or python_full_version >= "3.5.0" and python_version < "3.7" and python_version >= "3.6")
+importlib-metadata==4.10.0; python_version < "3.8" and python_version >= "3.7"
 isodate==0.6.1
 jmespath==0.10.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 msal-extensions==0.3.1
@@ -89,8 +88,8 @@ pywin32==303
 requests-oauthlib==1.3.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
-typing-extensions==4.0.1; python_version < "3.8" and python_version >= "3.6"
+typing-extensions==4.0.1; python_version < "3.8" and python_version >= "3.7"
 tzdata==2021.5; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6" and platform_system == "Windows"
 tzlocal==4.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.6"
 urllib3==1.26.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-zipp==3.6.0; python_version >= "3.6" and python_version < "3.7"
+zipp==3.7.0; python_version < "3.8" and python_version >= "3.7"
