--- a/tools/c7n_mailer/requirements.txt
+++ b/tools/c7n_mailer/requirements.txt
@@ -1,3 +1,4 @@
+Warning: The lock file is not up to date with the latest changes in pyproject.toml. You may be getting outdated dependencies. Run update to update them.
 attrs==21.4.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 boto3==1.20.37; python_version >= "3.6"
 botocore==1.23.37; python_version >= "3.6"
@@ -6,7 +7,7 @@ charset-normalizer==2.0.10; python_full_version >= "3.6.0" and python_version >=
 datadog==0.34.1
 decorator==5.1.1; python_version >= "3.5"
 idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlib-metadata==4.8.3; python_version >= "3.6" and python_version < "3.8"
+importlib-metadata==4.10.0; python_version >= "3.7" and python_version < "3.8"
 jinja2==3.0.3; python_version >= "3.6"
 jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 jsonpatch==1.32; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -15,7 +16,7 @@ jsonschema==3.2.0
 ldap3==2.9.1
 markupsafe==2.0.1; python_version >= "3.6"
 pyasn1==0.4.8
-pyrsistent==0.18.0; python_version >= "3.6"
+pyrsistent==0.18.1; python_version >= "3.7"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 python-http-client==3.3.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pyyaml==5.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
@@ -25,6 +26,6 @@ s3transfer==0.5.0; python_version >= "3.6"
 sendgrid==6.9.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 starkbank-ecdsa==2.0.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-typing-extensions==4.0.1; python_version >= "3.6" and python_version < "3.8"
+typing-extensions==4.0.1; python_version >= "3.7" and python_version < "3.8"
 urllib3==1.26.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-zipp==3.6.0; python_version >= "3.6" and python_version < "3.8"
+zipp==3.7.0; python_version >= "3.7" and python_version < "3.8"
