--- a/tools/c7n_openstack/requirements.txt
+++ b/tools/c7n_openstack/requirements.txt
@@ -6,8 +6,8 @@ cryptography==36.0.1; python_version >= "3.6"
 decorator==5.1.1; python_version >= "3.6"
 dogpile.cache==1.1.4; python_version >= "3.6"
 idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-importlib-metadata==4.8.3; python_version < "3.8" and python_version >= "3.6"
-iso8601==0.1.16; python_version >= "3.6"
+importlib-metadata==4.10.0; python_version < "3.8" and python_version >= "3.7"
+iso8601==1.0.2; python_full_version >= "3.6.2" and python_version < "4.0" and python_version >= "3.6"
 jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 jsonpatch==1.32; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 jsonpointer==2.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -18,11 +18,11 @@ openstacksdk==0.52.0; python_version >= "3.6"
 os-service-types==1.7.0; python_version >= "3.6"
 pbr==5.8.0; python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pyyaml==5.4.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+pyyaml==6.0; python_version >= "3.6"
 requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 requestsexceptions==1.4.0; python_version >= "3.6"
 six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 stevedore==3.5.0; python_version >= "3.6"
-typing-extensions==4.0.1; python_version < "3.8" and python_version >= "3.6"
+typing-extensions==4.0.1; python_version < "3.8" and python_version >= "3.7"
 urllib3==1.26.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-zipp==3.6.0; python_version < "3.8" and python_version >= "3.6"
+zipp==3.7.0; python_version < "3.8" and python_version >= "3.7"
