--- a/tools/c7n_mailer/pyproject.toml
+++ b/tools/c7n_mailer/pyproject.toml
@@ -31,10 +31,13 @@ ldap3 = "^2.6.1"
 redis = "^3.4.1"
 jsonpointer = "^2.0"
 jsonpatch = "^1.25"
+types-six = "^1.16.10"
+google-cloud-secret-manager = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 fakeredis = "^1.2.0"
 pytest = "^6.0.0"
+mypy = "^0.931"
 
 [build-system]
 requires = ["poetry>=0.12", "setuptools"]
