--- a/tools/c7n_azure/pyproject.toml
+++ b/tools/c7n_azure/pyproject.toml
@@ -31,7 +31,7 @@ azure-mgmt-cdn = "^10.0.0"
 azure-mgmt-containerregistry = {version = "8.0.0b1", allow-prereleases = true}
 azure-mgmt-containerservice = "^15.0.0"
 azure-mgmt-databricks = "1.0.0b1"
-azure-mgmt-datalake-store = "^1.0.0"
+azure-mgmt-datalake-store = "1.0.0"
 azure-mgmt-datafactory = "^1.0.0"
 azure-mgmt-dns = "8.0.0b1"
 azure-mgmt-eventgrid = "^8.0.0"
