--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ psutil = "^5.7.0"
 twine = "^3.1.1"
 pytest-sugar = "^0.9.2"
 click = "^8.0"
+fakeredis = "^1.2.0"  # from c7n_mailer
+parameterized = "^0.7.1" # from c7n_azure
+vcrpy-unittest = "^0.1.7"  # from c7n_azure
 
 # Subprojects
 c7n_awscc = { path = "tools/c7n_awscc", develop = true }
