--- a/tools/c7n_policystream/requirements.txt
+++ b/tools/c7n_policystream/requirements.txt
@@ -1,21 +1,21 @@
-boto3==1.21.42; python_version >= "3.6"
-botocore==1.24.42; python_version >= "3.6"
+boto3==1.24.10; python_version >= "3.7"
+botocore==1.27.10; python_version >= "3.7"
 cached-property==1.5.2; python_version < "3.8" and python_version >= "3.7"
-certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 cffi==1.15.0; python_version >= "3.7"
-charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
-click==8.1.2; python_version >= "3.7"
+charset-normalizer==2.0.12; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.5.0"
+click==8.1.3; python_version >= "3.7"
 colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
-idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlib-metadata==4.11.3; python_version < "3.8" and python_version >= "3.7"
+idna==3.3; python_version >= "3.7" and python_version < "4"
+importlib-metadata==4.11.4; python_version < "3.8" and python_version >= "3.7"
 jmespath==1.0.0; python_version >= "3.7"
 pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-pygit2==1.9.1; python_version >= "3.7"
-python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+pygit2==1.9.2; python_version >= "3.7"
+python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.6"
-requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-s3transfer==0.5.2; python_version >= "3.6"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+requests==2.28.0; python_version >= "3.7" and python_version < "4"
+s3transfer==0.6.0; python_version >= "3.7"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 typing-extensions==4.2.0; python_version < "3.8" and python_version >= "3.7"
-urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
+urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
 zipp==3.8.0; python_version < "3.8" and python_version >= "3.7"
